SubBt/force-app/main/default/objects/Budget_Modifications__c/Budget_Modifications__c.object-meta.xml
<CustomObject>
    <description>Keep track of all the budget modification for budgets.</description>
    <label>Budget Modification</label>
    <nameField>
        <displayFormat>BM - {00000}</displayFormat>
        <label>BT Budget Mod Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Modifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>