SubBt/force-app/main/default/objects/Budget_Modifications__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipName>Budget_Modifications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>