SubBt/force-app/main/default/objects/Budget_Modifications__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <inlineHelpText>Date the Budget Modification was initiated.</inlineHelpText>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>