SubBt/force-app/main/default/objects/Budget_Modifications__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget_Item__c.Budget__c</field>
            <operation>equals</operation>
            <valueField>$Source.Budget__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Budget_Item_Modifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>