SubBt/force-app/main/default/objects/Budget_Modifications__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Person requesting the Budget Modification.</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>BT_Budget_Modifications</relationshipName>
    <type>Lookup</type>
</CustomField>