SubBt/force-app/main/default/objects/Budget_Modifications__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To:</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Budget_Item__c.Budget__c</field>
            <operation>equals</operation>
            <valueField>$Source.Budget__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipName>Budget_Modifications</relationshipName>
    <type>Lookup</type>
</CustomField>