SubBt/force-app/main/default/objects/Budget_Modifications__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Budget__c</columns>
    <columns>Amount__c</columns>
    <columns>Date_Created__c</columns>
    <columns>Requestor__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>